--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
 <body>
   <div class="container">
     <div class="loading" id="loading">Loading Eaglercraft 1.12.2...</div>
-    <iframe id="game" src="game.html" style="display:none;"></iframe>
+    <iframe id="Eaglercraft_1.12_Offline_en_US" src="Eaglercraft_1.12_Offline_en_US.html" style="display:none;"></iframe>
   </div>
 
   <script>
